--- a/5.0/printer/Printer.cshtml
+++ b/5.0/printer/Printer.cshtml
@@ -1,64 +1,49 @@
-﻿<!DOCTYPE html>
-@using System.Web.Optimization
+﻿@using System.Web.Optimization
 @using Stolltec.Forms.Model
 @{
   // Parse model
   var Model = new FormsModel(this);
   var mode = (string)Model.Style["mode"].FieldInstance.Value;
-  var tracking_id = (string)Model.Style["tracking_id"].Value;
+
+  // setup layout
+  PageData["model"] = Model;
+  PageData["show_home"] = Model.Style.StyleInstance.StyleKey == "vocm19ap";
+  Layout = "PL_Layout.cshtml";
 }
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Drucker</title>
-  <link href="@Href("style.css")" type="text/css" rel="stylesheet" />
-</head>
-<body class="printer">
-  @Scripts.Render("~/Scripts/jquery", "~/Scripts/forms", "~/Scripts/vocatis.js", "js/hammer.min.js", "js/jquery.qrcode.js")
-
-  <header>
-  <img src="plattformlogo_01.png" 
-   class="plattformlogo" alt="plattformlogo">
- 
-    <h1>Wartenummer</h1>
-  </header>
- 
-  <div class="main">
-    @* Display list when idle *@
-    <div id="queuelist" data-content-src="@Model.Navigate("QueueList.cshtml")">
-    </div>
-
-    @* wait popup is shown, while generating a new number *@
-    <section id="waitPopup" style="display: none;">
-      <h4>Ihre Wartemarke wird gedruckt</h4>
-      <div>
-        <img src="wait.gif" id="wait" alt="wait" />
-      </div>
-      <h6>Bitte entnehmen Sie Ihre Wartenummer</h6>
-      <img src="PfeilUnten.png" />
-    </section>
-
-    @* take popup is shown, when the printout is ready *@
-    <section id="takePopup" style="display: none;">
-       <h4>Ihre Wartemarke wird gedruckt</h4>
-      <div>
-        <img src="wait.gif" id="wait" alt="wait" />
-      </div>
-      <h6>Bitte entnehmen Sie Ihre Wartenummer</h6>
-      <img src="PfeilUnten.png" />
-    </section>
-
-    @* show popup shows the number on the screen *@
-    <section id="showPopup" style="display: none;">
-      <h3>Sie werden angemeldet im Fachbereich</h3>
-      <h2 data-name></h2>
-      <p>Bitte merken Sie sich Ihre Anmeldenummer:</p>
-      <div class="number" data-number></div>
-      <p>Sie werden aufgerufen</p>
-    </section>
+<div class="main">
+  @* Display list when idle *@
+  <div id="queuelist" data-content-src="@Model.Navigate("QueueList.cshtml")">
   </div>
+
+  @* wait popup is shown, while generating a new number *@
+  <section id="waitPopup" style="display: none;">
+    <h4>Ihre Wartemarke wird gedruckt</h4>
+    <div>
+      <img src="wait.gif" id="wait" alt="wait" />
+    </div>
+    <h6>Bitte entnehmen Sie Ihre Wartenummer</h6>
+    <img src="PfeilUnten.png" />
+  </section>
+
+  @* take popup is shown, when the printout is ready *@
+  <section id="takePopup" style="display: none;">
+      <h4>Ihre Wartemarke wird gedruckt</h4>
+    <div>
+      <img src="wait.gif" id="wait" alt="wait" />
+    </div>
+    <h6>Bitte entnehmen Sie Ihre Wartenummer</h6>
+    <img src="PfeilUnten.png" />
+  </section>
+
+  @* show popup shows the number on the screen *@
+  <section id="showPopup" style="display: none;">
+    <h3>Sie werden angemeldet im Fachbereich</h3>
+    <h2 data-name></h2>
+    <p>Bitte merken Sie sich Ihre Anmeldenummer:</p>
+    <div class="number" data-number></div>
+    <p>Sie werden aufgerufen</p>
+  </section>
+</div>
 
 <script type="text/javascript">
 @if (mode == "print") {
@@ -160,16 +145,6 @@
   </text>
 }
   $(document).ready(function() {
-    @* 
-      disableSelect disables text selecting
-      clickBlanking prevent two clicks in a row
-      hamertime enables touch features and reduces reaction time
-     *@
-    $("body")
-    .disableSelect()
-    .clickBlanking({ timeout:500 });
-    var hammertime = new Hammer(document.body, {});
-
     @* update queue list periodically *@
     var queueList = $("#queuelist");
     var queueListUrl = queueList.data("content-src");
@@ -189,18 +164,4 @@
     };
     window.setTimeout(update, 0);
   });
-  </script>
-@if (!String.IsNullOrEmpty(tracking_id)) {
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=@tracking_id"></script>
-  <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', '@tracking_id');
-  </script>
-}
-</body>
-</html>
-
+</script>
