Layout Termin Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/4.0/DruckerMulti/Printer.cshtml
+++ b/4.0/DruckerMulti/Printer.cshtml
@@ -35,16 +35,16 @@
 
   @* wait popup is shown, while generating a new number *@
   <section id="waitPopup" style="display: none;">
-    <h3 class="text1">Sie werden angemeldet im Fachbereich</h3>
-    <h2 class="text2" data-name></h2>
+    <h3 class="text1">angemeldet</h3>
+    <h2 class="text2" data-name>Ihre Wartenummer:</h2>
     <div class="text3">Bitte warten</div>
-    <div class="text4">...</div>
+    <div class="text4">Bitte noch ein bisschen Geduld, Ihr Aufruf wird zeitnah zur Terminzeit erfolgen.</div>
   </section>
 
   @* take popup is shown, when the printout is ready *@
   <section id="takePopup" style="display: none;">
-    <h3 class="text1">Sie werden angemeldet im Fachbereich</h3>
-    <h2 class="text2" data-name></h2>
+    <h3 class="text1">Sie sind angemeldet</h3>
+    <h2 class="text2" data-name>Ihre Wartenummer:</h2>
     <div class="text3">Bitte entnehmen Sie Ihre Nummer</div>
     <img src="Pfeil.png" alt="Pfeil">
     <div class="text4">Sie werden aufgerufen</div>
@@ -52,8 +52,8 @@
 
   @* show popup shows the number on the screen *@
   <section id="showPopup" style="display: none;">
-    <h3 class="text1">Sie werden angemeldet im Fachbereich</h3>
-    <h2 class="text2" data-name></h2>
+    <h3 class="text1">Sie sind angemeldet</h3>
+    <h2 class="text2" data-name>Ihre Wartenummer:</h2>
     <div class="text3">Bitte merken Sie sich Ihre Anmeldenummer:</div>  
     <div class="number" data-number></div>
     <div class="text4">Sie werden aufgerufen</div>
