--- a/5.0/printer/P0_EntrySelect.cshtml
+++ b/5.0/printer/P0_EntrySelect.cshtml
@@ -10,11 +10,12 @@ Printer main entry page
   // setup layout
   PageData["model"] = Model;
   PageData["show_home"] = false;
+  PageData["show_back"] = false;
   Layout = "PL_Layout.cshtml";
 }
 <div class="site-content">
-  <h1>HERZLICH WILLKOMMEN!</h1>
-  <h2>Schön, dass Sie da sind.<br>Haben Sie einen Termin vereinbart?</h2>
+  <h2>HERZLICH WILLKOMMEN!</h2>
+  <h3>Haben Sie einen Termin vereinbart?</h3>
 </div>
 
 <nav class="site-nav">
