--- a/5.0/printer/P1_Appointment.cshtml
+++ b/5.0/printer/P1_Appointment.cshtml
@@ -12,17 +12,30 @@
   // setup layout
   PageData["model"] = Model;
   PageData["show_home"] = true;
+  PageData["show_back"] = false;
   Layout = "PL_Layout.cshtml";
 }
 
 <div id="stage1">
-  Bitte scannen
+  <img src="direction.png" alt="direction">
+  <p>Bitte scannen Sie den QR-Code aus Ihrer Terminbestätigung!</p>
 </div>
 
-<div id="stage2" style="display: none;">
-  Danke
+<div id="stage2" style="display:none;">
+ <img src="registration.png" id="registration" alt="registration" />
+ <h3>Sie sind angemeldet</h3>
+ <p>Bitte noch ein bisschen Geduld, Ihr Aufruf wird zeitnah zur Terminzeit erfolgen.</p>
+ <p>Ihre Wartenummer:</p>
+ <h2 data-name></h2>
+ <div class="left">
+    <p>Ticket drucken</p>
+    <a class="print-button" href='about:blank'><img src="printer.png" alt="Drucker"> </a>
+  </div>
+  <div class="right">
+    <p>Ticket scannen</p>
+    <div class="qrcode" data-url='about:blank'></div>
+  </div>
 </div>
-
 
 @* Qr code scanning *@
 <input id="scan">
@@ -30,5 +43,10 @@
   $('#scan').on("change", function() {
     $('#stage1').hide();
     $('#stage2').show();
+    $(".qrcode").qrcode({
+      text: 'test',
+      fill: '#706f6f',
+      background: '#dadada'
+    });
   }).focus();
 </script>
