--- a/5.0/printer/PL_Layout.cshtml
+++ b/5.0/printer/PL_Layout.cshtml
@@ -21,7 +21,7 @@
   <header>
     <img src="plattformlogo_01.png" class="plattformlogo" alt="plattformlogo">
     <h1>Wartenummer</h1>
-    @if (PageData["show_home"] == true) { <a href="@home_url"><img src="images/home.png" alt="home"></a> }
+    @if (PageData["show_home"] == true) { <a href="@home_url"><img src="home.png" class="home"alt="home"></a> }
   </header>
  
   @RenderBody()
