--- a/5.0/printer/Printer.cshtml
+++ b/5.0/printer/Printer.cshtml
@@ -16,12 +16,12 @@
   </div>
 
   @* wait popup is shown, while generating a new number *@
-  <section id="waitPopup" style="display: none;">
+  <section id="waitPopup" style="display: block;">
     <h4>Ihre Wartemarke wird gedruckt</h4>
     <div>
       <img src="wait.gif" id="wait" alt="wait" />
     </div>
-    <h6>Bitte entnehmen Sie Ihre Wartenummer</h6>
+    <p>Bitte entnehmen Sie Ihre Wartenummer</p>
     <img src="PfeilUnten.png" />
   </section>
 
@@ -31,7 +31,7 @@
     <div>
       <img src="wait.gif" id="wait" alt="wait" />
     </div>
-    <h6>Bitte entnehmen Sie Ihre Wartenummer</h6>
+    <h4>Bitte entnehmen Sie Ihre Wartenummer</h4>
     <img src="PfeilUnten.png" />
   </section>
 
