Printer.cshtml zurück gesetzt

--- a/5.0/printer/Printer.cshtml
+++ b/5.0/printer/Printer.cshtml
@@ -16,7 +16,7 @@
   </div>
 
   @* wait popup is shown, while generating a new number *@
-  <section id="waitPopup" style="display: block;">
+  <section id="waitPopup" style="display: none;">
     <h4>Ihre Wartemarke wird gedruckt</h4>
     <div>
       <img src="wait.gif" id="wait" alt="wait" />
