--- a/5.0/printer/P2_Appointment.cshtml
+++ b/5.0/printer/P2_Appointment.cshtml
@@ -26,37 +26,43 @@
   var re = new Regex("UID:([0-9]*)");
   var m = re.Matches(a);
   dynamic entry = null;
-  if (m.Count == 1)
+  if (m.Count != 1)
+  {
+    <div id="stage2">
+      <h3>Ungültiger QR-Code. Bitte scannen Sie einen Termin, den Sie online bei uns gebucht haben.</h3>
+    </div>
+  }
+  else
   {
     var apt_id = m[0].Groups[0].Value;
     entry = (from dynamic x in Model.DataSource("import")
              where String.Equals(x.id, apt_id)
              select x).FirstOrDefault();
-  }
-  if (entry == null)
-  {
-    <div id="stage2">
-      <h3>Fehler bei der Anmeldung.</h3>
-    </div>
-  }
-  else
-  {
-    var ticket = Vocatis.CreateTicket(queueid, catids);
+    if (entry == null)
+    {
+      <div id="stage2">
+        <h3>Ihr Termin wurde nicht in unserer Liste gefunden.</h3>
+      </div>
+    }
+    else
+    {
+      var ticket = Vocatis.CreateTicket(queueid, catids);
 
-    <div id="stage2">
-      <img src="registration.png" id="registration" alt="registration" />
-      <h3>Sie sind angemeldet</h3>
-      <p>Bitte noch ein bisschen Geduld, Ihr Aufruf wird zeitnah zur Terminzeit erfolgen.</p>
-      <p>Ihre Wartenummer: @ticket.Number</p>
-      <div class="left">
-        <p>Ticket drucken</p>
-        <a class="print-button" href='@Href("PrintTicket.cshtml", new { id=ticket.id, tid=tracking_id })'><img src="printer.png" alt="Drucker"> </a>
+      <div id="stage2">
+        <img src="registration.png" id="registration" alt="registration" />
+        <h3>Sie sind angemeldet</h3>
+        <p>Bitte noch ein bisschen Geduld, Ihr Aufruf wird zeitnah zur Terminzeit erfolgen.</p>
+        <p>Ihre Wartenummer: @ticket.Number</p>
+        <div class="left">
+          <p>Ticket drucken</p>
+          <a class="print-button" href='@Href("PrintTicket.cshtml", new { id=ticket.id, tid=tracking_id })'><img src="printer.png" alt="Drucker"> </a>
+        </div>
+        <div class="right">
+          <p>Ticket scannen</p>
+          <div class="qrcode" data-url="@Href("App.cshtml", new {id=ticket.Id, tracking_id})"></div>
+        </div>
       </div>
-      <div class="right">
-        <p>Ticket scannen</p>
-        <div class="qrcode" data-url="@Href("App.cshtml", new {id=ticket.Id, tracking_id})"></div>
-      </div>
-    </div>
+    }
   }
 }
 <script type="text/javascript">
