Ticket: Abstand Header reduziert Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/5.0/printer/TicketDefault.cshtml
+++ b/5.0/printer/TicketDefault.cshtml
@@ -15,10 +15,10 @@
 <body>
 @Scripts.Render("~/Scripts/jquery", "js/jquery.qrcode.js", "js/url_polyfill.js")
 <section class="ticket print_ticket">
-    <div>
+    <header>
       @DateTime.Now.ToString("dd.MM.yyyy")&emsp;
       @DateTime.Now.ToString("HH:mm")Uhr
-    </div>
+    </header>
   <h1>
     @Model.Style["ticketnumber"].Value
   </h1>
