printer: support wrong en/de encoding for qr-code scanner

--- a/5.0/printer/P2_Appointment.cshtml
+++ b/5.0/printer/P2_Appointment.cshtml
@@ -23,7 +23,7 @@
   dynamic catids = Model.Style["catid_apt"].Value;
 
   // Read data
-  var re = new Regex("UID:([0-9]*)");
+  var re = new Regex("UID[:Ö]([0-9]*)");
   var m = re.Matches(a);
   dynamic entry = null;
   if (m.Count != 1)
