--- a/5.0/printer/P0_EntrySelect.cshtml
+++ b/5.0/printer/P0_EntrySelect.cshtml
@@ -16,9 +16,20 @@ Printer main entry page
 <div class="site-content">
   <h2>HERZLICH WILLKOMMEN!</h2>
   <h3>Haben Sie einen Termin vereinbart?</h3>
+  <input id="scan">
 </div>
 
 <nav class="site-nav">
   <a href='@Model.Navigate("P1_Appointment.cshtml")'>Ich habe<br>einen Termin</a>
   <a href='@Model.Navigate("Printer.cshtml")'>Heute<br>spontan hier</a>
 </nav>
+
+@* Qr code scanning *@
+<script type="text/javascript">
+  $('#scan').on("change", function() {
+    var url = '@Html.Raw(Model.Navigate("P2_Appointment.cshtml", new { a="--text--"}))';
+    window.location.href = url.replace("--text--", $("#scan").val());
+  }).blur(function() {
+    window.setTimeout(function () { $("#scan").focus(); }, 20);
+  }).focus();
+</script>
