printer: fix unknown variable "id"

--- a/5.0/printer/PrinterTicket.cshtml
+++ b/5.0/printer/PrinterTicket.cshtml
@@ -13,7 +13,7 @@
   WaitNumber ticket;
   if (!String.IsNullOrEmpty(ticket_id))
   {
-   ticket = Vocatis.GetTicket(CommonGuidId.FromString(id));
+   ticket = Vocatis.GetTicket(CommonGuidId.FromString(ticket_id));
   }
   else
   {
