Errormeldung nach Scannen editiert
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/5.0/printer/P1_Appointment.cshtml
+++ b/5.0/printer/P1_Appointment.cshtml
@@ -45,7 +45,8 @@
       dynamic entry = null;
       if (m.Count != 1)
       {
-        <h3>Ungültiger QR-Code. Bitte scannen Sie einen Termin, den Sie online bei uns gebucht haben.</h3>
+        <h2>Ungültiger QR-Code.</h2>
+        <p>Bitte scannen Sie einen Termin, den Sie online bei uns gebucht haben.</p>
       }
       else
       {
