--- a/5.0/styles/printer.scss
+++ b/5.0/styles/printer.scss
@@ -121,6 +121,15 @@ body.printer {
             width: 5%;
             padding: 8vh 0 0 15vw;
         }
+        h2 {
+            font-size: 2.6em;
+            padding: 16vh 0 0 12vw;
+            color: red;
+            color: $color-secondary-foreground;
+            margin: 0;
+            width: 80%;
+        }
+
         h3 {
             color: $color-secondary-foreground;
             font-size: 2rem;
