--- a/5.0/printer/P1_Appointment.cshtml
+++ b/5.0/printer/P1_Appointment.cshtml
@@ -3,7 +3,10 @@
   Select appointment
 *@
 @using System.Web.Optimization
+@using System.Text.RegularExpressions
 @using Stolltec.Forms.Model
+@using Stolltec.Vocatis.Model
+
 @{
   // Parse model
   var Model = new FormsModel(this);
@@ -12,21 +15,133 @@
   PageData["model"] = Model;
   PageData["show_home"] = true;
   PageData["show_back"] = false;
-  Layout = "PL_Layout.cshtml";
+
+  var partial = Request["X-Requested-With"] == "XMLHttpRequest" || (Request.Headers != null && Request.Headers["X-Requested-With"] == "XMLHttpRequest");
+  if (! partial)
+  {
+    Layout = "PL_Layout.cshtml";
+  }
+
+  // Read request
+  var s = Request["s"];
+  var a = Request["a"];
+  var tracking_id = (string)Model.Style["tracking_id"].Value;
+  dynamic queueid = Model.Style["queueid_apt"].Value;
+  dynamic catids = Model.Style["catid_apt"].Value;
+
+  <div id="stages">
+  @switch (s)
+  {
+    default:
+    case "1":
+        <img src="direction.png" alt="direction">
+        <p>Bitte scannen Sie den QR-Code aus Ihrer Terminbestätigung!</p>
+        <input id="scan">
+      break;
+    case "2":
+      // Read data
+      var re = new Regex("UID[:Ö]([0-9]*)");
+      var m = re.Matches(a);
+      dynamic entry = null;
+      if (m.Count != 1)
+      {
+        <h3>Ungültiger QR-Code. Bitte scannen Sie einen Termin, den Sie online bei uns gebucht haben.</h3>
+      }
+      else
+      {
+        var apt_id = m[0].Groups[1].Value;
+        <!-- id: @apt_id -->
+        entry = (from dynamic x in Model.DataSource("import")
+                where String.Equals(x.id, apt_id)
+                select x).FirstOrDefault();
+        if (entry == null)
+        {
+          <h3>Ihr Termin wurde nicht in unserer Liste gefunden.</h3>
+        }
+        else
+        {
+          var ticket = Vocatis.CreateTicket(queueid, catids);
+
+          <img src="registration.png" id="registration" alt="registration" />
+          <h3>Sie sind angemeldet</h3>
+          <p>Bitte noch ein bisschen Geduld, Ihr Aufruf wird zeitnah zur Terminzeit erfolgen.</p>
+          <p>Ihre Wartenummer: @ticket.Number</p>
+          <div class="left">
+            <p>Ticket drucken</p>
+            <a class="print-button" href='@Href("PrintTicket.cshtml", new { id=ticket.Id, tid=tracking_id })'><img src="printer.png" alt="Drucker"> </a>
+          </div>
+          <div class="right">
+            <p>Ticket scannen</p>
+            <div class="qrcode" data-url="@Href("App.cshtml", new {id=ticket.Id, tracking_id})"></div>
+          </div>
+        }
+      }
+      break;
+  }
+  </div>
 }
 
-<div id="stage1">
-  <img src="direction.png" alt="direction">
-  <p>Bitte scannen Sie den QR-Code aus Ihrer Terminbestätigung!</p>
-  <input id="scan">
-</div>
+@if (! partial)
+{
+  <div id="loading" style="display: none;">
+    <h3>Einen Moment, Ihr Code wird geprüft.</h3>
+  </div>
+  <script type="text/javascript">
+    @* scan logic *@
+    function loadStage2(text) {
+      $("#stages").html($("#loading").html());
+      var url = '@Html.Raw(Model.Navigate("P1_Appointment.cshtml", new { s="2", a="--text--"}))';
+      url = url.replace("--text--", text);
+      $.ajax({
+        url: url,
+        cache: false
+      }).done(function (result) {
+        $("#stages").html($(result).html());
+      });
+    }
+    @if (String.IsNullOrEmpty(s) && !String.IsNullOrEmpty(a))
+    {
+      <text>loadStage2("@Html.Raw(a)");</text>
+    }
+    $('#scan').on("change", function() {
+      loadStage2($("#scan").val());
+    }).blur(function() {
+      window.setTimeout(function () { $("#scan").focus(); }, 20);
+    }).focus();
 
-@* Qr code scanning *@
-<script type="text/javascript">
-  $('#scan').on("change", function() {
-    var url = '@Html.Raw(Model.Navigate("P2_Appointment.cshtml", new { a="--text--"}))';
-    window.location.href = url.replace("--text--", $("#scan").val());
-  }).blur(function() {
-    window.setTimeout(function () { $("#scan").focus(); }, 20);
-  }).focus();
-</script>
+    @* Qr code *@
+    // make absolute  
+    var a = document.createElement("a");
+    a.href = $(".qrcode").data("url");
+    $(".qrcode").qrcode({
+      text: a.href,
+      fill: '#706f6f',
+      background: '#dadada'
+    });
+
+    @* Printing *@
+    $(".print-button").unbind()
+      .printTicket({
+        legacy: false,
+        printErrorTimeout: 60000,
+        stripBody: false,
+        beginPrint: function() {
+          $("#waitPopup").show();
+        },
+        endPrint: function() {
+          $("#waitPopup").hide();
+          $("#takePopup").show();
+          window.setTimeout(function() { $("#takePopup").hide(); }, 3000);
+        },
+        failPrint: function() {
+          $("#waitPopup").hide();
+        }
+      });
+    $(document).ready(function () {
+      reportPrinterStatus({
+        url: "@Href(Stolltec.Forms.PrinterStatus.Path)",
+        interval: 60000
+      });
+    });
+  </script>
+}
