--- a/5.0/styles/printer.scss
+++ b/5.0/styles/printer.scss
@@ -98,7 +98,18 @@ body.printer {
         cursor: none;
         background-color:transparent;
         color:$color-secondary-background;
+    }       
+    
+    #loading{
+        h3 {
+            font-size: 2.6em;
+            margin: 16vh 0 0 15vw;
+            color: $color-highlight-background;
+            width: 80%;
+        }
+
     }
+
     #stages {
         background-color: $color-secondary-background;
         height: 60vh;
@@ -114,18 +125,28 @@ body.printer {
             color: $color-secondary-foreground;
             margin: 0;
             width: 80%;
-            font-weight: 600;
+            font-weight: normal;
             line-height: 1.4em;
         }
+
         #registration {
             width: 5%;
-            padding: 8vh 0 0 15vw;
+            padding: 6vh 0 0 15vw;
         }
-        h2 {
-            font-size: 2.6em;
+
+        h1 {
+            font-size: 3em;
+            font-weight: bold;
             padding: 16vh 0 0 12vw;
-            color: red;
             color: $color-secondary-foreground;
+            margin: 0;
+            width: 80%;
+        }
+
+        h2 {
+            font-size: 2.4em;
+            padding: 16vh 0 0 15vw;
+            color: $color-highlight-background;
             margin: 0;
             width: 80%;
         }
@@ -134,7 +155,9 @@ body.printer {
             color: $color-secondary-foreground;
             font-size: 2rem;
             display: inline;
+            padding: 6vh 0 0 2vw;
         }
+
         .left {
             float: left;
             width: 32%;
@@ -143,12 +166,13 @@ body.printer {
                 margin-top: 2vh;
                 font-size: 2em;
                 font-weight: 600;
+                padding: 4vh 0 0 12vw;
             }
             a.print-button {
                 background-color: $color-secondary-foreground;
                 position: absolute;
                 margin-top: 2vh;
-                left: 12vw;
+                left: 16vw;
                 width: 20vw;
                 height: 11vh;
                 img {
@@ -160,16 +184,18 @@ body.printer {
         .right {
             float: right;
             width: 40%;
-            margin: 1vh 5vw 0 0vw;
+            margin: 0vh 5vw 0 0vw;
             p {
                 margin-top: 2vh;
                 font-size: 2em;
                 font-weight: 600;
+                padding: 5vh 0 2vh 6vw;
             }
             .qrcode {
-                position: absolute;
-                top: 41vh;
+
+                top: 45vh;
                 left: 68vw;
+                margin-left: 8vw;
                 canvas {
                     top: 55vh;
                     left: 60vw;
