printer/appointments: fix printing of appointment ticket (wrong url)

--- a/5.0/printer/P1_Appointment.cshtml
+++ b/5.0/printer/P1_Appointment.cshtml
@@ -78,7 +78,7 @@
             <p>Ihre Wartenummer: @ticket.Number</p>
             <div class="left">
               <p>Ticket drucken</p>
-              <a class="print-button" href='@Href("PrintTicket.cshtml", new { id=ticket.Id, tid=tracking_id })'><img src="printer.png" alt="Drucker"> </a>
+              <a class="print-button" href='@Href("PrinterTicket.cshtml", new { id=ticket.Id, tid=tracking_id })'><img src="printer.png" alt="Drucker"> </a>
             </div>
             <div class="right">
               <p>Ticket scannen</p>
