--- a/5.0/printer/P1_Appointment.cshtml
+++ b/5.0/printer/P1_Appointment.cshtml
@@ -11,6 +11,8 @@
 @using iSign
 
 @{
+  var showQrCode = true;
+
   // Parse model
   var Model = new FormsModel(this);
 
@@ -80,10 +82,13 @@
               <p>Ticket drucken</p>
               <a class="print-button" href='@Href("PrinterTicket.cshtml", new { id=ticket.Id, tid=tracking_id })'><img src="printer.png" alt="Drucker"> </a>
             </div>
-            <div class="right">
-              <p>Ticket scannen</p>
-              <div class="qrcode" data-url="@Href("App.cshtml", new {id=ticket.Id, tracking_id})"></div>
-            </div>
+            if (showQrCode)
+            {
+              <div class="right">
+                <p>Ticket scannen</p>
+                <div class="qrcode" data-url="@Href("App.cshtml", new {id=ticket.Id, tracking_id})"></div>
+              </div>
+            }
           }
         }
       }
