--- a/5.0/styles/ticket.scss
+++ b/5.0/styles/ticket.scss
@@ -30,10 +30,10 @@ section.ticket {
     }
     h1 {
         text-align: center;
-        font-size: 65px;
+        font-size: 56px;
         color: #000;
         line-height: 1px;
-        margin: 33px;
+        margin-top: 33px;
     }
     img {
         width: 100%;
